# achilles

./: LICENSE  README.md
achilles_controller/: CMakeLists.txt  package.xml
achilles_controller/include/achilles_controller/: achilles_controller.h
achilles_controller/launch/: final (copy).launch  final.launch
achilles_controller/src/: achilles_controller.cpp  achilles_controller_node.cpp
achilles_image_transport/: CMakeLists.txt  package.xml
achilles_navigation/: CMakeLists.txt  package.xml
achilles_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml
achilles_navigation/include/achilles_navigation/: achilles_navigation.h  defines.h  dijkstra.h  expander.h  frontier_search.h  gradient_path.h  grid_navigation.h  grid_path.h  left_hand.h  orientation_filter.h  potential_calculator.h  quadratic_calculator.h  traceback.h
achilles_navigation/launch/: achilles_navigaton.launch
achilles_navigation/src/: achilles_navigation.cpp  achilles_navigation_node.cpp  dijkstra.cpp  frontier_search.cpp  gradient_path.cpp  grid_navigation.cpp  grid_path.cpp  left_hand.cpp  orientation_filter.cpp  quadratic_calculator.cpp
achilles_qr_detector/: CMakeLists.txt  package.xml
achilles_qr_detector/include/achilles_qr_detector/: geotiff_writer.h
achilles_qr_detector/maps/: achilles_map_13:40:28.tfw  achilles_map_13:40:28.tif  achilles_map_13:40:38.tif  achilles_map_13:40:48.tif  achilles_map_13:49:12.tif  achilles_map_13:49:22.tif  achilles_map_13:49:32.tif  achilles_map_13:49:42.tif  achilles_map_13:49:52.tif  achilles_map_13:50:02.tif  achilles_map_13:50:12.tif  achilles_map_13:50:22.tif  achilles_map_13:50:32.tfw  achilles_map_13:50:32.tif  achilles_map_13:50:42.tif  achilles_map_13:50:52.tif  achilles_map_13:51:02.tif  achilles_map_13:51:12.tif  achilles_map_13:51:22.tif  achilles_map_13:51:32.tif  achilles_map_13:51:42.tif  achilles_map_13:51:52.tif  achilles_map_13:52:02.tif  achilles_map_13:52:12.tif  achilles_map_13:52:22.tif  strings.txt
achilles_qr_detector/msg/: qrPos.msg  victimPos.msg
achilles_qr_detector/src/: QR_Detection.cpp  QR_Detection.h  QR_Detection_node.cpp  QR_filtering.cpp  QR_filtering.h  QR_filtering_node.cpp  geotiff_node.cpp  geotiff_saver.cpp  geotiff_writer.cpp  geotiff_writer.h  map_writer_interface.h  scan_macher_node.cpp  test.cpp
achilles_qr_detector/srv/: VictimImage.srv
achilles_victim_tracker/: CMakeLists.txt  package.xml
